package ro.mta.se.lab.interfaces;

public interface countHours {
    public int getCountHours();
}
